# django_toacademy_2

./: README.md  pyproject.toml
_project_/: settings.py  urls.py  widgets.py
_project_/static/css/: forms.css
_project_/templates/: base.html  form_base.html  index.html  nav.html
_project_/templates/forum/: base.html  index.html  new_message.html
_project_/templates/users/: login.html  register.html
apps/forum/: forms.py  models.py  urls.py  views.py
apps/forum/migrations/: 0001_initial.py  0002_initial.py
apps/forum/templates/: new_message.html
apps/home/: views.py
apps/home/templates/: index.html
apps/users/: forms.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/: login.html  register.html
static/css/: main.css  navbar.css
utils/: mixins.py
